test/corpus/function.txt
==============
Plain function
==============
scn scriptname
begin blockmode
  func
end
---
(script_file
  script_name: (script_name
    declaration: (script_declarator)
    script_name: (identifier))
    block_mode: (block
      block_type: (identifier)
      function: (identifier)))

=======================
Function with arguments
=======================
scn scriptname
begin blockmode
  func argu 1
  func (argu 1)
  func "literal", opt
  func array->value
  func literal + value
end
---
(script_file
  script_name: (script_name
    declaration: (script_declarator)
    script_name: (identifier))
    block_mode: (block
      block_type: (identifier)
      function: (identifier)
        argument: (identifier)
        argument: (literal)
      function: (identifier)
        argument: (identifier)
        argument: (literal)
      function: (identifier)
        argument: (literal)
        argument: (opt
          option: (operands
            plain: (identifier)))
      function: (identifier)
        argument: (string_manip
          variable: (identifier)))
      function: (identifier)
        argument: (string_manip
          variable: (identifier)))
