test/corpus/script-body.txt
===========
Script name
===========
scn scriptname
---
(script_file
  script_name: (script_name
    declaration: (script_declarator)
    script_name: (identifier)))

===========
Var declare
===========
scn scriptname
int var
short var
long var
float var
string_var var
array_var var
ref var
---
(script_file
  script_name: (script_name
    declaration: (script_declarator)
    script_name: (identifier))
    var_declaration: (var_declare
      type_int: (int)
      variable: (identifier))
    var_declaration: (var_declare
      type_int: (int)
      variable: (identifier))
    var_declaration: (var_declare
      type_int: (int)
      variable: (identifier))
    var_declaration: (var_declare
      type_float: (float)
      variable: (identifier))
    var_declaration: (var_declare
      type_string: (string)
      variable: (identifier))
    var_declaration: (var_declare
      type_array: (array)
      variable: (identifier))
    var_declaration: (var_declare
      type_ref: (ref)
      variable: (identifier)))

==========
Block mode
==========
scn scriptname
begin blockmode {}
end
begin blockmode {arg}
end
begin blockmode {arg, arg}
end
---
(script_file
  script_name: (script_name
    declaration: (script_declarator)
    script_name: (identifier))
    block_mode: (block
      block_type: (identifier))
    block_mode: (block
      block_type: (identifier)
      argument: (identifier))
    block_mode: (block
      block_type: (identifier)
      argument: (identifier)
      argument: (identifier)))
