test/corpus/user_functions.txt
=============
User function
=============
scn scriptname
begin blockmode
  Call func
end
---
(script_file
  script_name: (script_name
    declaration: (script_declarator)
    script_name: (identifier))
    block_mode: (block
      block_type: (identifier)
      user: (user_function
        function: (identifier))))

=======================
User function with args
=======================
scn scriptname
begin blockmode
  Call func arg 1
  Call func (arg 1)
end
---
(script_file
  script_name: (script_name
    declaration: (script_declarator)
    script_name: (identifier))
    block_mode: (block
      block_type: (identifier)
      user: (user_function
        function: (identifier)
        arguments: (identifier)
        arguments: (literal))
      user: (user_function
        function: (identifier)
        arguments: (identifier)
        arguments: (literal))))
