test/corpus/while.txt
============
Simple block
============
scn scriptname
begin blockmode
  while x > (1 || 2)
    eval x
  loop
end
---
(script_file
  script_name: (script_name
    declaration: (script_declarator)
    script_name: (identifier))
    block_mode: (block
      block_type: (identifier)
      while: (while_loop
        condition: (condition
          plain: (identifier)
          (binary_operator)
          literal: (literal)
          (binary_operator)
          literal: (literal))
        eval: (eval
          plain: (identifier)))))

